tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__unlock_test__unlock_screen_locked_out_state.snap
---
source: tests/snapshot_tests/screens/unlock_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                   OpenKeyring                                  "
"                          Secure  •  Private  •  Yours                          "
"                                                                                "
"                        ─────────────────────────────────                       "
"                                                                                "
"    ┌────────────────────────── MASTER PASSWORD ───────────────────────────┐    "
"    │                                                                      │    "
"    │ 🔐  Enter master password                                            │    " Hidden by multi-width symbols: [(7, " ")]
"    │                                                                      │    "
"    └──────────────────────────────────────────────────────────────────────┘    "
"                                                                                "
"                Your master password unlocks your encrypted data                "
"                                                                                "
"                        ─────────────────────────────────                       "
"                          ⚠ Locked, please retry in 30s                         "
"                             5 consecutive failures                             "
"                                                                                "
"                     [ Tab ]   Press Tab to use recovery key                    "
"                                                                                "
"                                                                                "
"                                                                                "
