tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__unlock_test__unlock_screen_recovery_key_mode.snap
---
source: tests/snapshot_tests/screens/unlock_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                  ░█▀█░█▀█░█▀▀░█▀█░█░█░█▀▀░█░█░█▀▄░▀█▀░█▀█░█▀▀                  "
"                  ░█░█░█▀▀░█▀▀░█░█░█▀▄░█▀▀░░█░░█▀▄░░█░░█░█░█░█                  "
"                  ░▀▀▀░▀░░░▀▀▀░▀░▀░▀░▀░▀▀▀░░▀░░▀░▀░▀▀▀░▀░▀░▀▀▀                  "
"                                                                                "
"                          Secure  •  Private  •  Yours                          "
"                                                                                "
"                        ─────────────────────────────────                       "
"                                                                                "
"    ┌──────────────────────────── RECOVERY KEY ────────────────────────────┐    "
"    │                                                                      │    "
"    │ 🔐  Enter your recovery key words…                                   │    " Hidden by multi-width symbols: [(7, " ")]
"    │                                                                      │    "
"    └──────────────────────────────────────────────────────────────────────┘    "
"                                                                                "
"                  Your recovery key unlocks your encrypted data                 "
"                                                                                "
"                        ─────────────────────────────────                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                    [ Tab ]   Press Tab to use master password                  "
"                                                                                "
