tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__unlock_test__unlock_screen_success_state.snap
---
source: tests/snapshot_tests/screens/unlock_test.rs
expression: backend
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                   OpenKeyring                                  "
"                          Secure  •  Private  •  Yours                          "
"                                                                                "
"                        ─────────────────────────────────                       "
"                                                                                "
"    ┌────────────────────────── MASTER PASSWORD ───────────────────────────┐    "
"    │                                                                      │    "
"    │ 🔐  Enter master password                                            │    " Hidden by multi-width symbols: [(7, " ")]
"    │                                                                      │    "
"    └──────────────────────────────────────────────────────────────────────┘    "
"                                                                                "
"                Your master password unlocks your encrypted data                "
"                                                                                "
"                        ─────────────────────────────────                       "
"                                                                                "
"                                ✓ Vault unlocked                                "
"                                                                                "
"                     [ Tab ]   Press Tab to use recovery key                    "
"                                                                                "
"                                                                                "
"                                                                                "
